[package]
name = "wamp-core"
version = "0.1.0"
edition = "2021"
description = "WAMP core library for parsing messages."
readme = "./README.md"
repository = "https://github.com/wamp-rs/wamp-core"
exclude = ["./.vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.188", features = ["derive"]}
serde_json = "1.0.107"
regex = "1.9.5"
serde_repr = "0.1.16"
lazy_static = "1.4.0"
maplit = "1.0.2"
tungstenite = {version = "0.20.1", features = ["native-tls"]}
http = "0.2.9"

[dev-dependencies]
dotenv = "0.15.0"